Fixed initial naming

--- a/MVVM Bundle.xctemplate/TemplateInfo.plist
+++ b/MVVM Bundle.xctemplate/TemplateInfo.plist
@@ -17,21 +17,21 @@
 		<string>com.apple.platform.iphoneos</string>
 	</array>
 	<key>Options</key>
-  <array>
-    <dict>
-      <key>Identifier</key>
-      <string>productName</string>
-      <key>Required</key>
-      <true/>
-      <key>Name</key>
-      <string>View:</string>
-      <key>Description</key>
-      <string>The name of the View and ViewModel to create</string>
-      <key>Type</key>
-      <string>text</string>
-      <key>Default</key>
-      <string>MyView</string>
-    </dict>
-  </array>
+	<array>
+		<dict>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Required</key>
+			<true/>
+			<key>Name</key>
+			<string>Name:</string>
+			<key>Description</key>
+			<string>The name of the View Controller, ViewModel to create</string>
+			<key>Type</key>
+			<string>text</string>
+			<key>Default</key>
+			<string>MyView</string>
+		</dict>
+	</array>
 </dict>
 </plist>
